Update Merge All Feature